--- a/ui/email.ui
+++ b/ui/email.ui
@@ -145,20 +145,20 @@
           <string notr="true">font:normal</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
-          <item row="4" column="2">
-           <widget class="QPushButton" name="edit_report_button">
-            <property name="text">
-             <string>Modifica</string>
-            </property>
-           </widget>
-          </item>
           <item row="5" column="0">
-           <widget class="QLabel" name="email_label">
+           <widget class="QLabel" name="bill_label">
             <property name="styleSheet">
              <string notr="true">font:bold</string>
             </property>
             <property name="text">
-             <string>Email</string>
+             <string>Fattura</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="2">
+           <widget class="QPushButton" name="edit_report_button">
+            <property name="text">
+             <string>Modifica</string>
             </property>
            </widget>
           </item>
@@ -172,11 +172,21 @@
             </property>
            </widget>
           </item>
+          <item row="7" column="0">
+           <widget class="QLabel" name="email_label">
+            <property name="styleSheet">
+             <string notr="true">font:bold</string>
+            </property>
+            <property name="text">
+             <string>Email</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="0">
            <widget class="QLineEdit" name="surname_line_edit"/>
           </item>
-          <item row="1" column="2">
-           <widget class="QDateEdit" name="born_date_edit"/>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="name_line_edit"/>
           </item>
           <item row="0" column="0">
            <widget class="QLabel" name="surname_label">
@@ -188,9 +198,6 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
-           <widget class="QLineEdit" name="name_line_edit"/>
-          </item>
           <item row="3" column="0">
            <widget class="QLabel" name="report_label">
             <property name="styleSheet">
@@ -201,12 +208,8 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="0" colspan="2">
-           <widget class="QLineEdit" name="report_line_edit">
-            <property name="readOnly">
-             <bool>true</bool>
-            </property>
-           </widget>
+          <item row="1" column="2">
+           <widget class="QDateEdit" name="born_date_edit"/>
           </item>
           <item row="0" column="1">
            <widget class="QLabel" name="name_label">
@@ -218,8 +221,29 @@
             </property>
            </widget>
           </item>
-          <item row="6" column="0">
+          <item row="4" column="0" colspan="2">
+           <widget class="QLineEdit" name="report_line_edit">
+            <property name="readOnly">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="8" column="0">
            <widget class="QLineEdit" name="email_line_edit"/>
+          </item>
+          <item row="6" column="2">
+           <widget class="QPushButton" name="edit_bill_button">
+            <property name="text">
+             <string>Modifica</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="0" colspan="2">
+           <widget class="QLineEdit" name="bill_line_edit">
+            <property name="readOnly">
+             <bool>true</bool>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -264,8 +288,20 @@
       </item>
      </layout>
     </item>
-    <item>
+    <item alignment="Qt::AlignHCenter">
      <widget class="QPushButton" name="send_button">
+      <property name="minimumSize">
+       <size>
+        <width>400</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>400</width>
+        <height>16777215</height>
+       </size>
+      </property>
       <property name="text">
        <string>Invia</string>
       </property>
@@ -274,6 +310,23 @@
    </layout>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>sender_email_line_edit</tabstop>
+  <tabstop>sender_password_line_edit</tabstop>
+  <tabstop>surname_line_edit</tabstop>
+  <tabstop>name_line_edit</tabstop>
+  <tabstop>born_date_edit</tabstop>
+  <tabstop>edit_report_button</tabstop>
+  <tabstop>edit_bill_button</tabstop>
+  <tabstop>email_line_edit</tabstop>
+  <tabstop>first_email_text</tabstop>
+  <tabstop>second_email_text</tabstop>
+  <tabstop>send_button</tabstop>
+  <tabstop>see_password_check_box</tabstop>
+  <tabstop>report_line_edit</tabstop>
+  <tabstop>bill_line_edit</tabstop>
+  <tabstop>second_email_line_edit</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
